<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ex4">


    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="710dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:padding="30dp"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingEnd="30dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvexp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/txtexp2"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:ems="10"
            android:hint="@string/digite"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="30dp" />


        <Button
            android:id="@+id/btncalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="110dp"
            android:padding="20dp"
            android:text="@string/btncalc" />

        <TextView
            android:id="@+id/tvresult"
            android:layout_width="187dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp" />


        <Button
            android:id="@+id/btnex2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="100dp"
            android:text="@string/next2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>